manifest/applications/demo-whoami/demo-whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: demo-whoami
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
  - name: http
    port: 80
    targetPort: http
